refactor: ReservationRepository 인터페이스로 구현 후 JdbcReservationRepository 를 infrastructure 에서 구현하여 확장성 확보